--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.2.0",
     "react-native": "0.53.3",
+    "react-native-router-flux": "^4.0.0-beta.28",
     "react-navigation": "^1.1.2"
   },
   "devDependencies": {
