--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "moment": "^2.20.1",
     "react": "16.2.0",
     "react-native": "0.53.3",
+    "react-native-logger": "^1.0.3",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-navigation": "^1.1.2"
   },
