--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.53.3",
     "react-native-logger": "^1.0.3",
     "react-native-router-flux": "^4.0.0-beta.28",
+    "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.1.2",
     "underscore.string": "^3.3.4"
   },
