--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.20.1",
     "react": "16.2.0",
     "react-native": "0.53.3",
+    "react-native-carousel-view": "^0.5.1",
     "react-native-logger": "^1.0.3",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-splash-screen": "^3.0.6",
