--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.2.0",
     "react-native": "0.53.3",
     "react-native-carousel-view": "^0.5.1",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-logger": "^1.0.3",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-splash-screen": "^3.0.6",
