--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -142,6 +142,7 @@ dependencies {
     compile "com.facebook.react:react-native:+"  // From node_modules
 	compile project(':react-native-vector-icons')
     compile project(':react-native-splash-screen')
+    compile project(':react-native-fetch-blob')
 }
 
 // Run this once to be able to run the application with BUCK
