--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "dependencies": {
     "crypto-js": "^3.1.9-1",
     "moment": "^2.20.1",
-    "react": "16.2.0",
-    "react-native": "0.53.3",
+    "react": "16.3.1",
+    "react-native": "0.55.1",
     "react-native-carousel-view": "^0.5.1",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-logger": "^1.0.3",
@@ -21,6 +21,7 @@
     "underscore.string": "^3.3.4"
   },
   "devDependencies": {
+    "eslint": "^4.19.1",
     "babel-jest": "22.4.0",
     "babel-preset-react-native": "4.0.0",
     "jest": "22.4.0",
