--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.3.1",
     "react-native": "0.55.1",
     "react-native-carousel-view": "^0.5.1",
+    "react-native-dropdown-menu": "^1.1.0",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-logger": "^1.0.3",
     "react-native-router-flux": "^4.0.0-beta.28",
