--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-fetch-blob": "^0.10.8",
     "react-native-logger": "^1.0.3",
     "react-native-router-flux": "^4.0.0-beta.28",
+    "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-splash-screen": "^3.0.6",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.1.2",
