--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "crypto-js": "^3.1.9-1",
+    "immutable": "^3.8.2",
     "moment": "^2.20.1",
     "react": "16.3.1",
     "react-native": "0.55.1",
+    "react-native-animatable": "^1.2.4",
     "react-native-carousel-view": "^0.5.1",
     "react-native-dropdown-menu": "^1.1.0",
     "react-native-fetch-blob": "^0.10.8",
