--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
     "react-native-splash-screen": "^3.0.6",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.1.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "underscore.string": "^3.3.4"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
     "babel-jest": "22.4.0",
     "babel-preset-react-native": "4.0.0",
+    "eslint": "^4.19.1",
     "jest": "22.4.0",
-    "react-test-renderer": "16.2.0"
+    "react-test-renderer": "16.2.0",
+    "redux-devtools": "^3.4.1"
   },
   "jest": {
     "preset": "react-native"
