--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -143,6 +143,7 @@ dependencies {
 	compile project(':react-native-vector-icons')
     compile project(':react-native-splash-screen')
     compile project(':react-native-fetch-blob')
+    compile project(':react-native-native-video-player')
 }
 
 // Run this once to be able to run the application with BUCK
