--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-dropdown-menu": "^1.1.0",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-logger": "^1.0.3",
+    "react-native-native-video-player": "^1.3.4",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-splash-screen": "^3.0.6",
