--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -142,8 +142,12 @@ dependencies {
     compile "com.facebook.react:react-native:+"  // From node_modules
 	compile project(':react-native-vector-icons')
     compile project(':react-native-splash-screen')
+    compile project(':react-native-video')
     compile project(':react-native-fetch-blob')
     compile project(':react-native-native-video-player')
+    compile project(':react-native-linear-gradient')
+    compile project(':react-native-orientation')
+    compile project(':react-native-keep-awake')
 }
 
 // Run this once to be able to run the application with BUCK
