--- a/package.json
+++ b/package.json
@@ -12,17 +12,24 @@
     "moment": "^2.20.1",
     "react": "16.3.1",
     "react-native": "0.55.1",
+    "react-native-af-video-player": "^0.1.9",
     "react-native-animatable": "^1.2.4",
     "react-native-carousel-view": "^0.5.1",
     "react-native-dropdown-menu": "^1.1.0",
     "react-native-fetch-blob": "^0.10.8",
+    "react-native-keep-awake": "^3.0.1",
+    "react-native-linear-gradient": "^2.4.0",
     "react-native-logger": "^1.0.3",
     "react-native-native-video-player": "^1.3.4",
+    "react-native-orientation": "^3.1.3",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-scrollable-tab-view": "^0.8.0",
+    "react-native-slider": "^0.11.0",
     "react-native-splash-screen": "^3.0.6",
+    "react-native-tab-view": "0.0.77",
     "react-native-vector-icons": "^4.5.0",
-    "react-navigation": "^1.1.2",
+    "react-native-video": "^2.0.0",
+    "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "underscore.string": "^3.3.4"
