--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-logger": "^1.0.3",
     "react-native-native-video-player": "^1.3.4",
     "react-native-orientation": "^3.1.3",
+    "react-native-root-toast": "^3.0.1",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-slider": "^0.11.0",
