实验高德地图

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "immutable": "^3.8.2",
     "moment": "^2.20.1",
     "react": "16.3.1",
-    "react-native": "0.55.1",
+    "react-native": "^0.55.4",
     "react-native-af-video-player": "^0.1.9",
+    "react-native-amap3d": "^1.0.0",
     "react-native-animatable": "^1.2.4",
     "react-native-carousel-view": "^0.5.1",
     "react-native-dropdown-menu": "^1.1.0",
