--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -148,6 +148,7 @@ dependencies {
     compile project(':react-native-linear-gradient')
     compile project(':react-native-orientation')
     compile project(':react-native-keep-awake')
+    compile project(':react-native-amap3d')
 }
 
 // Run this once to be able to run the application with BUCK
