--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,6 +149,7 @@ dependencies {
     compile project(':react-native-orientation')
     compile project(':react-native-keep-awake')
     compile project(':react-native-amap3d')
+    compile project(':react-native-amap-geolocation')
 }
 
 // Run this once to be able to run the application with BUCK
