--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.3.1",
     "react-native": "^0.55.4",
     "react-native-af-video-player": "^0.1.9",
+    "react-native-amap-geolocation": "^0.3.0",
     "react-native-amap3d": "^1.0.0",
     "react-native-animatable": "^1.2.4",
     "react-native-carousel-view": "^0.5.1",
